# NL2SQL

./: .env.template  .gitignore  README.md  agent_tools.py  app.py  config.py  db_connector.py  debug_login.py  docker-compose.yml  init_data.py  pyproject.toml  requirements.txt  schema_extractor.py  sql_agent.py  test_connection.py
tests/: test_data.sql
